WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125884
WebKit2 View Gestures: Fix the shadow layer restore-from-overpinched animation
https://bugs.webkit.org/show_bug.cgi?id=125884
Summary
WebKit2 View Gestures: Fix the shadow layer restore-from-overpinched animation
Tim Horton
Reported
2013-12-17 16:37:27 PST
I'm going to take the olliej defense and say I Cmd-Z'd twice too far when writing the patch, because I know it worked at some point :)
Attachments
patch
(3.12 KB, patch)
2013-12-17 16:39 PST
,
Tim Horton
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-12-17 16:39:06 PST
Created
attachment 219470
[details]
patch
Tim Horton
Comment 2
2013-12-17 17:02:42 PST
http://trac.webkit.org/changeset/160740
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug