WebKit2 View Gestures: Fix the shadow layer restore-from-overpinched animation https://bugs.webkit.org/show_bug.cgi?id=125884

Reviewed by Anders Carlsson.

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::commitTransientZoom):
Set to-values on the right animations.

(WebKit::TiledCoreAnimationDrawingArea::adjustTransientZoom):
(WebKit::TiledCoreAnimationDrawingArea::applyTransientZoomToPage):
We don't need to explicitly set the shadow path, because PlatformCALayer::setBounds does it for us now.


Canonical link: https://commits.webkit.org/143894@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160740 268f45cc-cd09-0410-ab3c-d52691b4dbfc